# AetherSense

./: .clang-format  .clang-tidy  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml  ui.yml
apps/: aethersense_cli.cpp
include/aethersense/core/: config.hpp  errors.hpp  types.hpp  version.hpp
include/aethersense/dsp/: calibration.hpp  filters.hpp  outlier.hpp  resampler.hpp  window.hpp
include/aethersense/io/: csi_reader.hpp  csi_writer.hpp  record_recovery.hpp  stream_reader.hpp
include/aethersense/runtime/: decision_engine.hpp  metrics.hpp  pipeline.hpp  ring_buffer.hpp
scripts/: soak.sh
src/core/: config.cpp
src/dsp/: calibration.cpp  outlier.cpp  resampler.cpp
src/io/: csv_reader.cpp  json_reader.cpp  record_recovery.cpp  stream_reader.cpp
src/runtime/: pipeline.cpp  ring_buffer.cpp
testdata/: csi_small.csv  csi_small.jsonl  sample_config.json
tests/: test_calibration.cpp  test_config.cpp  test_decision.cpp  test_dsp.cpp  test_harness.hpp  test_main.cpp  test_outlier.cpp  test_parsers.cpp  test_pipeline_smoke.cpp  test_record_recovery.cpp  test_resampler.cpp  test_ring_buffer.cpp  test_soak.cpp  test_stream_reader.cpp
ui/electron/: electron-builder.json  package.json  tsconfig.json  vite.renderer.config.ts
ui/electron/src/main/: ipc.ts  main.ts  processManager.ts
ui/electron/src/renderer/: app.tsx  index.html
ui/electron/src/renderer/components/: Charts.tsx  Controls.tsx  LogPanel.tsx  StatusBar.tsx
ui/electron/src/renderer/state/: store.ts
ui/electron/tests/: e2e.smoke.spec.ts  renderer.unit.spec.ts
(+1 files in other folders)
